[package]
name = "ecargo"
description = "Cargo metadata viewer using egui"
version = "0.3.0-dev"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/crumblingstatue/ecargo"

[dependencies]
anyhow = "1.0.82"
cargo_metadata = "0.19.1"
eframe = "0.29.1"
egui-modal = "0.5.0"
egui_commonmark = "0.18.0"
slotmap = "1.0.7"
cargo-platform = "0.1.5"
open = "5.1.2"
directories = "5.0.1"
toml = "0.8.12"
serde = { version = "1.0.199", features = ["derive"] }
egui_extras = { version = "0.29.1", features = ["file", "http", "svg"] }
image = { version = "0.25.1", features = ["png"] }
clap = { version = "4.5.4", features = ["derive"] }

[profile.release]
panic = "abort"
strip = true
